--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@astrojs/ts-plugin": "^1.10.4",
     "@astrojs/vue": "^5.0.4",
     "@floating-ui/vue": "^1.1.5",
-    "@formwerk/core": "^0.6.2",
+    "@formwerk/core": "https://pkg.pr.new/formwerkjs/formwerk/@formwerk/core@225038d",
     "@iconify-json/vscode-icons": "^1.2.8",
     "@types/byte-size": "^8.1.2",
     "@vue/compiler-sfc": "^3.5.13",
