--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/partytown": "^2.1.3",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/starlight": "^0.32.2",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/starlight": "^0.32.3",
     "@astrojs/starlight-tailwind": "^3.0.0",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/ts-plugin": "^1.10.4",
@@ -30,9 +30,9 @@
     "@types/byte-size": "^8.1.2",
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/repl": "^4.5.1",
-    "@vueuse/core": "^12.7.0",
-    "arktype": "2.1.2",
-    "astro": "^5.4.1",
+    "@vueuse/core": "^13.0.0",
+    "arktype": "2.1.10",
+    "astro": "^5.5.3",
     "astro-expressive-code": "^0.40.2",
     "byte-size": "^9.0.1",
     "fflate": "^0.8.2",
@@ -40,35 +40,35 @@
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
-    "valibot": "1.0.0-rc.3",
+    "valibot": "1.0.0",
     "vue": "^3.5.13",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@babel/types": "^7.26.9",
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@eslint/js": "9.21.0",
+    "@babel/types": "^7.26.10",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/js": "9.22.0",
     "@expressive-code/plugin-collapsible-sections": "^0.40.2",
     "@iconify-json/ph": "^1.2.2",
-    "@shikijs/twoslash": "^3.1.0",
+    "@shikijs/twoslash": "^3.2.1",
     "@types/hash-sum": "^1.0.2",
     "@types/lodash-es": "^4.17.12",
-    "@typescript-eslint/parser": "^8.26.0",
-    "eslint": "9.21.0",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "9.22.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
     "gzip-size": "^7.0.0",
     "hash-sum": "^2.0.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
+    "lint-staged": "^15.5.0",
     "lodash-es": "^4.17.21",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "shiki": "^1.26.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "shiki": "^3.2.1",
     "sucrase": "^3.35.0",
-    "typescript-eslint": "^8.26.0",
+    "typescript-eslint": "^8.26.1",
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.4.1"
   },
