--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/sitemap": "^3.3.0",
-    "@astrojs/starlight": "^0.32.4",
+    "@astrojs/starlight": "^0.32.5",
     "@astrojs/starlight-tailwind": "^3.0.1",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@astrojs/vue": "^5.0.7",
+    "@astrojs/vue": "^5.0.9",
     "@floating-ui/vue": "^1.1.6",
-    "@formwerk/core": "^0.10.2",
-    "@iconify-json/vscode-icons": "^1.2.17",
+    "@formwerk/core": "^0.10.3",
+    "@iconify-json/vscode-icons": "^1.2.18",
     "@types/byte-size": "^8.1.2",
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/repl": "^4.5.1",
     "@vueuse/core": "^13.0.0",
-    "arktype": "2.1.12",
-    "astro": "^5.5.4",
+    "arktype": "2.1.16",
+    "astro": "^5.5.6",
     "astro-expressive-code": "^0.40.2",
     "byte-size": "^9.0.1",
     "fflate": "^0.8.2",
-    "motion-v": "^0.13.1",
+    "motion-v": "1.0.0-alpha.1",
     "radix-vue": "^1.9.17",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
@@ -55,7 +55,7 @@
     "@shikijs/twoslash": "^3.2.1",
     "@types/hash-sum": "^1.0.2",
     "@types/lodash-es": "^4.17.12",
-    "@typescript-eslint/parser": "^8.28.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "eslint": "9.23.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
@@ -69,7 +69,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "shiki": "^3.2.1",
     "sucrase": "^3.35.0",
-    "typescript-eslint": "^8.28.0",
+    "typescript-eslint": "^8.29.0",
     "unplugin-icons": "^22.1.0",
     "unplugin-vue-components": "^28.4.1"
   },
