--- a/package.json
+++ b/package.json
@@ -18,60 +18,60 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/sitemap": "^3.3.0",
-    "@astrojs/starlight": "^0.32.5",
+    "@astrojs/sitemap": "^3.3.1",
+    "@astrojs/starlight": "^0.34.1",
     "@astrojs/starlight-tailwind": "^3.0.1",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@astrojs/vue": "^5.0.9",
+    "@astrojs/vue": "^5.0.11",
     "@floating-ui/vue": "^1.1.6",
-    "@formwerk/core": "^0.10.3",
-    "@iconify-json/vscode-icons": "^1.2.18",
+    "@formwerk/core": "^0.10.6",
+    "@iconify-json/vscode-icons": "^1.2.20",
     "@types/byte-size": "^8.1.2",
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/repl": "^4.5.1",
-    "@vueuse/core": "^13.0.0",
-    "arktype": "2.1.16",
-    "astro": "^5.5.6",
-    "astro-expressive-code": "^0.40.2",
+    "@vueuse/core": "^13.1.0",
+    "arktype": "2.1.20",
+    "astro": "^5.7.6",
+    "astro-expressive-code": "^0.41.2",
     "byte-size": "^9.0.1",
     "fflate": "^0.8.2",
-    "motion-v": "1.0.0-alpha.1",
+    "motion-v": "1.0.0",
     "radix-vue": "^1.9.17",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2",
+    "sharp": "^0.34.1",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
     "valibot": "1.0.0",
     "vue": "^3.5.13",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/types": "^7.27.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@eslint/js": "9.23.0",
-    "@expressive-code/plugin-collapsible-sections": "^0.40.2",
+    "@eslint/js": "9.25.1",
+    "@expressive-code/plugin-collapsible-sections": "^0.41.2",
     "@iconify-json/ph": "^1.2.2",
-    "@shikijs/twoslash": "^3.2.1",
+    "@shikijs/twoslash": "^3.3.0",
     "@types/hash-sum": "^1.0.2",
     "@types/lodash-es": "^4.17.12",
-    "@typescript-eslint/parser": "^8.29.0",
-    "eslint": "9.23.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "9.25.1",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
     "gzip-size": "^7.0.0",
     "hash-sum": "^2.0.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.0",
+    "lint-staged": "^15.5.1",
     "lodash-es": "^4.17.21",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "shiki": "^3.2.1",
+    "shiki": "^3.3.0",
     "sucrase": "^3.35.0",
-    "typescript-eslint": "^8.29.0",
+    "typescript-eslint": "^8.31.0",
     "unplugin-icons": "^22.1.0",
-    "unplugin-vue-components": "^28.4.1"
+    "unplugin-vue-components": "^28.5.0"
   },
   "lint-staged": {
     "*.{js,mjs,ts,md,mdx,astro,css}": [
