--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "formwerk.dev",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@9.14.3+sha256.652c47dac7c2b9350db4cdb9330c087d527114a0c2dff4cbac7ea9b96be928bd",
+  "packageManager": "pnpm@10.11.0+sha256.a69e9cb077da419d47d18f1dd52e207245b29cac6e076acedbeb8be3b1a67bd7",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -27,6 +27,7 @@
     "@floating-ui/vue": "^1.1.6",
     "@formwerk/core": "^0.10.6",
     "@iconify-json/vscode-icons": "^1.2.20",
+    "@stackblitz/sdk": "^1.11.0",
     "@types/byte-size": "^8.1.2",
     "@vue/compiler-sfc": "^3.5.13",
     "@vue/repl": "^4.5.1",
