--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/sitemap": "^3.4.1",
-    "@astrojs/starlight": "^0.34.3",
-    "@astrojs/starlight-tailwind": "^3.0.1",
-    "@astrojs/tailwind": "^5.1.5",
+    "@astrojs/starlight": "^0.34.5",
+    "@astrojs/starlight-tailwind": "^4.0.1",
     "@astrojs/ts-plugin": "^1.10.4",
     "@astrojs/vue": "^5.1.0",
     "@floating-ui/vue": "^1.1.7",
     "@formwerk/core": "^0.11.1",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@stackblitz/sdk": "^1.11.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/byte-size": "^8.1.2",
     "@vue/compiler-sfc": "^3.5.17",
     "@vue/repl": "^4.6.1",
@@ -40,7 +40,7 @@
     "motion-v": "1.5.0",
     "radix-vue": "^1.9.17",
     "sharp": "^0.34.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "valibot": "1.1.0",
     "vue": "^3.5.17",
